# django-ninja-benchmarks

./: Dockerfile  docker-compose.yml  pyproject.toml  run_test.py
